--- a/pages/core/style.css
+++ b/pages/core/style.css
@@ -924,13 +924,13 @@
       margin-top: 30px;
     }
     .offers-description{
-      
       margin: 10px;
       margin-bottom: 100px;
       color: #8A94A6;
       line-height: 1.6;
       font-size: 20px;
       letter-spacing: 1px;
+      text-align: center;
     }
     .offers-divider{
       margin-top: 35px;
@@ -938,6 +938,9 @@
       margin-left: 30px;
       margin-right: 30px;
       color: #FF0041;
+    }
+    .content-description{
+      font-size: 23px;
     }
   /*Phần Customer Review của tiệm
   */
